--- a/gap_amplification.tex
+++ b/gap_amplification.tex
@@ -588,6 +588,22 @@ Paley-Zygmundの不等式(\cref{lem:paley-zigmund-inequality})より, $\E[B]$お
 \end{proof}
 
 \section{アルファベット削減}
+ギャップ増幅補題(\cref{lem:gap-amplification-lemma})では変換前後で制約グラフのアルファベットは同一であることを主張しているが,
+べき乗をとることによって, $\UNSAT$の値は$\sqrt{\ell}$倍に増幅する一方でアルファベットは$\Sigma^\ell$になってしまう.
+そこで, アルファベット$\Sigma^\ell$上の制約グラフ$G$を, $\UNSAT$や$\size$をそれほど損なわずアルファベット$\Sigma$上の制約グラフ$G'$に変換する必要がある.
+\begin{lemma}{アルファベット削減}{alphabet-reduction}
+  ある定数$q\in\Nat$, $C,\gamma>0$, アルファベット$\Sigma_0$, および多項式時間アルゴリズム$A$が存在して以下が成り立つ:
+  アルゴリズム$A$は制約グラフ$G=\ip{(V,E),\Sigma,C}$を入力として受け取り,
+  別の制約グラフ$G'=\ip{(V',E'),\Sigma_0,C'}$を出力する.
+  ただし$G'$は
+  \begin{itemize}
+    \item $\size(G') \le C\cdot \size(G)$
+    \item $\UNSAT(G)=0$ならば$\UNSAT(G')=0$
+    \item $\UNSAT(G)>0$ならば$\UNSAT(G') \ge \gamma\UNSAT(G)$
+  \end{itemize}
+\end{lemma}
+\begin{proof}
 
+\end{proof}
 
 
