新たに二次方程式系の充足可能性判定問題$\ThreeQuadEQ$に関する例を追加し、関連するコマンド$\QuadEQ$および$\ThreeQuadEQ$を定義。文書全体の整合性を向上させるための修正を実施し、PDFおよびSynctexファイルを更新。BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/commands.tex
+++ b/commands.tex
@@ -47,6 +47,8 @@
 \newcommand{\LinEq}{\textsc{LinEq}}
 \renewcommand{\SAT}{\textsc{SAT}}
 \newcommand{\ThreeSAT}{\textsc{3SAT}}
+\newcommand{\QuadEQ}{\textsc{QuadEQ}}
+\newcommand{\ThreeQuadEQ}{\textsc{3-QuadEQ}}
 
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
