--- a/introduction.tex
+++ b/introduction.tex
@@ -246,12 +246,98 @@ SATは論理回路に関する問題だが, カープ帰着の下でも\cite{Coo
 この定理は全てのNP完全性の理論の基礎となる計算量理論における最も重要な定理の一つである.
 
 \begin{theorem}{Cook-Levinの定理}{Cook-Levin}
-  論理回路$C\colon\binset^n\to\binset$を入力として受け取り, $C(x)=1$を満たす$x\in\binset^n$が存在するかどうかを判定する問題を\emph{充足可能性判定問題}(SAT; satisfiability problem)という.
-  充足可能性判定問題(SAT)はNP完全である.
+  論理回路$C\colon\binset^n\to\binset$を入力として受け取り, $C(x)=1$を満たす$x\in\binset^n$が存在するかどうかを判定する問題を\emph{回路充足可能性判定問題}(Circuit SAT; circuit satisfiability problem)という.
+  回路充足可能性判定問題はNP完全である.
 \end{theorem}
 
-Cook-Levinの定理の証明はクラスNPの検証者を非決定的チューリング機械で模倣し, その機械を回路として表現することによって与えられるが, それにはチューリング機械や論理回路の定義なども必要になってしまい本講義の本筋から離れていってしまうため割愛する.
-なお, 文脈によっては上記の定義における充足可能性判定問題を\emph{回路充足可能性判定問題}(CSAT; Circuit SAT)と呼ぶこともある.
+Cook-Levinの定理の証明はクラスNPの検証者を非決定的チューリング機械で模倣し, その機械を回路として表現することによって与えられる. 重要なのは次の主張である:
+\begin{claim}{チューリング機械を模倣する回路}{Turing-machine-circuit}
+  任意の多項式時間チューリング機械$M$に対して, ある回路族$(C_n)_{n\in\Nat}$が存在して以下が成り立つ:
+  \begin{itemize}
+    \item 全ての$n\in\Nat$に対して, $C_n\colon\binset^n\to\binset$は$n^{O(1)}$個のゲート(AND,OR,NOT)を含む. なお, ここでは全ての素子は二つの入力を受け取り一つの出力を持つ.
+    \item 任意の$n\in\Nat$と全ての$x\in\binset^n$に対し, $M$が$x$を受理することと$C_n(x)=1$は同値.
+    \item 各$C_n$は$n^{O(1)}$時間で構成できる.
+  \end{itemize}
+\end{claim}
+\cref{claim:Turing-machine-circuit}を証明するにはチューリング機械の厳密な定義なども必要であり講義では詳しくは扱わないが, その概要を以下に説明する.
+\begin{proof}[証明の概要.]
+  チューリング機械とは, 無限の長さの\emph{記憶テープ}を備えた有限状態機械である.
+  \emph{記憶テープ}とは無限の長さの記号列であり, 入力$x\in\binset^*$に対して
+  まずは最初の$\abs{x}$文字は$x$が記載されており, それ以外の文字は全て$\bot$(空白であることを表す記号)である.
+  また, \emph{ヘッド}と呼ばれるポインタがあり, これは現在は記憶テープのどの位置の文字を読み書きするかを表す.
+  各ステップにおいて, 現在の状態とヘッドが指し示す文字を参照し, 次の状態, 現在のヘッドに書き込む内容, ヘッドの移動方向(左右もしくはそのまま)を決める.
+  さらに機械には二つの相異なる二つの特別な状態$q_{\mathrm{accept}}$と$q_{\mathrm{reject}}$があり, これらに遷移すると計算が終了する. 終了時の状態に応じてチューリング機械の出力(acceptまたはreject)が決まる.
+  
+  \begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/Turing.pdf}
+    \caption{チューリング機械の一例. 各状態において, ヘッドの指し示す記憶テープの値のラベルがついた有効辺に沿って遷移し, そのヘッドの位置にある記憶テープの値を必要があれば書き換え, 最後にヘッドの位置を一つ右, 一つ左のいずれかに移動するかそのままにする.}
+  \end{figure}
+  
+  計算が終了するまでに要したステップ数をこのチューリング機械の\emph{(時間)計算量}という.
+  チューリング機械$M$が多項式時間であったとする. このとき, 任意の十分大きな$n\in\Nat$と任意の$x\in\binset^n$に対して, $M$の計算の任意の時点での記憶テープの内容($\bot$以外の文字の個数)は高々$n^{O(1)}$文字で表現できる.
+  また, ヘッドの指し示す位置は$O(\log n)$ビットで表現でき, 状態の個数は高々$O(1)$である.
+  従って, 任意の時点でのチューリング機械の, 記憶テープの内容も含めた状態(便宜上これを計算状態と呼ぶことにする)は高々$n^{O(1)}$ビットで表現できる.
+  また, 記憶テープの書き換えは高々$1$ビットの書き換えであり, ヘッド位置の変更も加算と減算で計算できるため,
+  チューリング機械の計算の各ステップもまた小さいサイズの回路によって模倣できる. すなわち, 現在の計算状態を入力として受け取り, 計算状態の第$i$番目のビットを出力する回路$C_i$を用意してこれを全ての$i\in[n^{O(1)}]$に対して並べることによって, 回路として表現できる.
+  これを全てのステップについて並べれば, チューリング機械$M$を模倣する多項式サイズの回路$C$ (すなわち, $M(x)$の最終状態が$q_{\mathrm{accept}}$または$q_{\mathrm{reject}}$であるかどうかを判定する回路)が得られる.
+\end{proof}
+
+これを用いてCook-Levinの定理の証明を与える.
+
+\begin{proof}[\cref{thm:Cook-Levin}の証明]
+  NPの定義より, 任意の判定問題$L\in\NP$に対して, 多項式時間のNP検証者$V(x;\pi)$が存在する.
+  \cref{claim:Turing-machine-circuit}より, このNP検証者を模倣する回路族$(C_n)_{n\in\Nat}$が存在する.
+  特に, 入力$x\in\binset^*$が与えられたとき, $V(x;\cdot)$というチューリング機械を模倣する回路$C_x\colon\binset^{\abs{\pi}}\to\binset$が多項式時間で構成できる.
+  さらにこれが$L$から回路充足可能性判定問題へのカープ帰着になっていることを確認すれば証明は完了する.
+  実際, $x$がYesインスタンスであるならば$V(x;\pi)=1$を満たす$\pi$が存在することから, $C_x$は充足可能である.
+  一方で$x$がNoインスタンスであるならば$C_x$は充足可能でない.
+  従って$x\mapsto C_x$は確かに$L$から回路充足可能性判定問題へのカープ帰着になっている.
+\end{proof}
+
+Cook-Levinの定理を用いると, 以下に示す二次方程式系の充足可能性判定問題がNP完全であることが示せる:
+\begin{theorem}{二次方程式系の充足可能性判定問題}{ThreeQuadEQ-NP-complete}
+  判定問題$\QuadEQ$を以下のように定義する:
+  $m$個の$n$変数二次関数$f_1,\dots,f_m\colon \F^n\to\F_2$が与えられる.
+  このとき, ある$x\in\F^n$が存在して$f_1(x)=\dots=f_m(x)=0$を満たすかどうかを判定せよ.
+  特に, 全ての$i\in[m]$に対し, $f_i(x_1,\dots,x_n)$の値が高々$k$個の変数$x_{i_1},\dots,x_{i_k}$の値のみに依存するようなとき, $k$-$\QuadEQ$と呼ぶ.
+  
+  $\ThreeQuadEQ$はNP完全である.
+\end{theorem}
+\begin{proof}
+  $\ThreeQuadEQ$はNPに属する.
+  実際, NP証拠として連立方程式の解$x\in\F^n$を与え, それが実際に$f_1(x)=\dots=f_m(x)=0$を満たすかどうかは$n^{O(1)}$時間で判定できる (入力として$f_1,\dots,f_m$が与えているため, これを二進文字列として表現したときの長さは$n$以上である).
+
+  次に, 回路充足可能性判定問題から$\ThreeQuadEQ$へのカープ帰着を構成する.
+  回路充足可能性判定問題の入力$C\colon\binset^n\to\binset$が与えられたとき, これらの変数を$x_1,\dots,x_n$とする.
+  各ゲートに対し, そのゲートに対応する変数を新たに用意し, これらを$x_{n+1},\dots,x_{n+s}$とする ($s$は回路$C$に含まれる入力以外のゲートの個数).
+  各$k\in[s]$に対し, 変数$x_{n+k}$に対応するゲート$c$の入力に対応する変数を$x_i,x_j$とし (もしもゲートがnotゲートであったならば$x_i$のみを考える), さらに$i,j < n+k$を満たすとする (こうなるように, 入力$x$に近い順にゲートの番号づけを行う).
+  関数$f_k\colon \F^n\to\F_2$を以下のように定義する: $k\in[s]$に対し
+  \begin{align*}
+    f_k(x) = \begin{cases}
+      x_k - x_i x_j & \text{if ゲート$c$がANDゲート}, \\
+      x_k - (x_i + x_j - x_i x_j) & \text{if ゲート$c$がORゲート}, \\
+      x_k - (1-x_i) & \text{if ゲート$c$がNOTゲート}.
+    \end{cases}
+  \end{align*}
+  $k=s+1$に対して$f_{s+1}(x) = 1 - x_{n+s}$と定義する (\cref{fig:circuit-to-3-QUADEQ}を参照).
+  このとき, 各$f_k$は高々三つの変数にのみ依存するため,
+  $(f_k)_{k\in[s+1]}$は$\ThreeQuadEQ$のインスタンスとなり, 回路$C$が入力として与えられたとき多項式時間で構成できる.
+
+  \begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/circuit_to_3-QUADEQ.pdf}
+    \caption{回路充足可能性判定問題から$\ThreeQuadEQ$へのカープ帰着の例. $(\text{左辺})-(\text{右辺})$が各$f_k$となる. \label{fig:circuit-to-3-QUADEQ}}
+  \end{figure}
+
+  最後に$C$が回路充足可能性判定問題のYesインスタンスであることと$(f_k)_{k\in[s+1]}$が$\ThreeQuadEQ$のYesインスタンスであることが同値であることを示す.
+  識別のため, $C$の入力は$x\in\binset^n$とし, $f_k$の入力は$\overline{x} \in \binset^{n+s}$とする.
+  まず, $C$がYesインスタンスであるとき, ある$x\in\binset^n$が存在して$C(x)=1$を満たす.
+  出力値$C(x)$を計算するときの途中の各ゲートの出力値をそのまま対応する変数に割り当てることによって$\overline{x}$を構成すると, 確かに全ての$k$に対して$f_k(\overline{x})=0$を満たす.
+  一方, $(f_k)$がYesインスタンスであるとき, 最初の$x=(\overline{x}_1,\dots,\overline{x}_{n})$とすれば, $C(x)=1$となる.
+  従って, $C\mapsto (f_k)_{k\in[s+1]}$は確かに回路充足可能性判定問題から$\ThreeQuadEQ$へのカープ帰着になっている.
+\end{proof}
+
 %次に, 3-SATと呼ばれるSATの特殊ケースのNP完全性\cite{Karp1972}について述べる. この結果は間接的にPCP定理の証明にも必要であるが, そのためには論理回路の構造的性質を本質的に利用する必要があり, Cook-Levinの定理の証明と同様に本講義の本筋から離れてしまうため, ここではその証明を省略する.
 %\begin{definition}{3-SAT}{3-SAT}
 %  $\true$または$\false$上に値をとる変数$\varx$に対し, $\varx$または$\overline{\varx}$のいずれかの形の論理式を\emph{リテラル}(literal)といい, 複数の変数のリテラルを論理和$\lor$で結んで得られる, すなわち$C=\ell_1\lor \dots \lor \ell_k$の形で表される論理式を\emph{節}(clause)という.
