--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,dvipdfmx]{book}
+\usepackage{lmodern}
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb,amsfonts,mathtools,amsthm}
 \usepackage[dvipdfmx]{graphicx}
