コマンド$\tor$を新たに定義し、回路充足可能性判定問題に関する記述を修正。文書全体の整合性を向上させるための修正を実施し、PDFおよびSynctexファイルを更新。BiberログとLaTeXmkデータベースを最新の状態に保つための調整を行った。

--- a/commands.tex
+++ b/commands.tex
@@ -9,6 +9,7 @@
 \newcommand{\indicator}[1]{\mathbf{1}_{#1}}
 \newcommand{\condition}{\;\middle\vert\;}
 \newcommand{\tand}{\text{ and }}
+\newcommand{\tor}{\text{ or }}
 \newcommand{\tif}{\text{if }}
 \newcommand{\totherwise}{\text{otherwise}}
 
@@ -42,13 +43,11 @@
 \renewcommand{\epsilon}{\varepsilon}
 \newcommand{\size}{\mathrm{size}}
 
-\newcommand{\PRIMES}{\textsc{Primes}}
-\newcommand{\ThreeCOL}{\textsc{3COL}}
-\newcommand{\LinEq}{\textsc{LinEq}}
-\renewcommand{\SAT}{\textsc{SAT}}
-\newcommand{\ThreeSAT}{\textsc{3SAT}}
-\newcommand{\QuadEQ}{\textsc{QuadEQ}}
-\newcommand{\ThreeQuadEQ}{\textsc{3-QuadEQ}}
+\newcommand{\PRIMES}{\mathrm{Primes}}
+\newcommand{\ThreeCOL}{\mathrm{3COL}}
+\newcommand{\LinEq}{\mathrm{LinEQ}}
+\newcommand{\QuadEQ}{\mathrm{QuadEq}}
+\newcommand{\ThreeQuadEQ}{\mathrm{3-QuadEq}}
 
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
